service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-purchase
spec:
  selector:
    env: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
