ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-purchase
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: service-purchase
                port:
                  number: 80
          - path: /otusapp/.*/.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-purchase
                port:
                  number: 80
